sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available</label>
    <type>Checkbox</type>
</CustomField>