sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/Assigned_Open_Jobs__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Open_Jobs__c</fullName>
    <label>Assigned Open Jobs</label>
    <summaryFilterItems>
        <field>Casuals_Job_Assignment__c.Job_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>Casuals_Job_Assignment__c.Casual__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>