sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <formula>Total_Rating__c  /  Counter_RollUp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>