sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/Casual_Name__c.field-meta.xml
<CustomField>
    <fullName>Casual_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Casual&#39;s Name</label>
    <type>Text</type>
</CustomField>