sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/Contractor_Usable__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Usable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contractor Usable</label>
    <type>Checkbox</type>
</CustomField>