sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/Contractual_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractual_End_Date__c</fullName>
    <label>Contractual End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>