sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/Contractual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Start_Date__c</fullName>
    <label>Contractual Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>