sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/Counter_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Counter_RollUp__c</fullName>
    <label>Assigned Closed Job Counter</label>
    <summaryFilterItems>
        <field>Casuals_Job_Assignment__c.Job_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Casuals_Job_Assignment__c.Casual__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>