sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/MPesa_Number__c.field-meta.xml
<CustomField>
    <fullName>MPesa_Number__c</fullName>
    <formula>TEXT(Account__r.Mobile_Payment_Phone_Number__c)</formula>
    <label>MPesa Number</label>
    <type>Text</type>
</CustomField>