sfSandBoxCode/force-app/main/default/objects/Casual__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <label>Total Rating</label>
    <summarizedField>Casuals_Job_Assignment__c.Rating__c</summarizedField>
    <summaryFilterItems>
        <field>Casuals_Job_Assignment__c.Job_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Casuals_Job_Assignment__c.Casual__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>