sfSandBoxCode/force-app/main/default/objects/Casual__c/validationRules/End_date_not_less_than_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_date_not_less_than_start_date</fullName>
    <active>true</active>
    <errorConditionFormula>Contractual_Start_Date__c &gt; Contractual_End_Date__c</errorConditionFormula>
    <errorMessage>Contractual end date should not be less than contractual start date</errorMessage>
</ValidationRule>