sfSandBoxCode/force-app/main/default/objects/Casual__c/validationRules/Start_and_end_date_maximum_difference.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_and_end_date_maximum_difference</fullName>
    <active>true</active>
    <errorConditionFormula>Contractual_End_Date__c - Contractual_Start_Date__c &gt;92</errorConditionFormula>
    <errorMessage>The the maximum difference between contractual start date and contractual end date should not be more that 6 months</errorMessage>
</ValidationRule>