sfSandBoxCode/force-app/main/default/objects/Casual__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Casual_Name__c</columns>
    <columns>Assigned_Open_Jobs__c</columns>
    <columns>ID_Number__c</columns>
    <columns>Grade__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>